--- a/bundles/org.eclipse.platform.doc.isv/guide/editors.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors.htm
@@ -19,10 +19,10 @@ haven't yet looked at the implementation of an editor.</P>
 A tool that edits and manages a particular resource type will
 provide customized behavior for manipulating the data represented by the resource.</P>
 <P >Editors can come in all shapes and sizes.&nbsp; If a plug-in's editor is text-based, then the editor can either use the existing default text editor, or create a customized text editor
-by using the facilities provided in the platform.&nbsp; The latter approach is used by the Java development tooling (JDT)
-editors.&nbsp;&nbsp;</P>
+by using the facilities provided in the platform.&nbsp; The latter approach is used by the
+Java example editor.</P>
     <p >
-<img alt="" border="0" src="images/javaeditor.jpg" width="429" height="376">
+<img border="0" alt="" src="images/javaeditor.jpg" width="577" height="436">
     <p >
 If a plug-in's editor is not text based, then a custom editor must be implemented by the plug-in. There are several approaches for building
 custom editors, all of which depend on the look and behavior of the editor.
