--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench_outliner.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench_outliner.htm
@@ -103,7 +103,13 @@ obtains a document for the editor input and parses the text.</P>
 
 
 <P >The text is parsed into ranges, called segments, within the document.&nbsp;
-These segments are displayed by name in the outline view.&nbsp; When the
+These segments are displayed by name in the outline view.</P>
+
+
+<P ><img border="0" alt="" src="images/javacontentoutline.jpg" width="225" height="197"></P>
+
+
+<P >When the
 selection changes, the selected segment is retrieved.&nbsp; Its offsets are used
 to set the highlight range in the editor.</P>
 
